# itmo_entry_contest_1_task_61

./: README.md  main.ipynb  pyproject.toml
